--- a/Machine Learning/Minor/Spam Classifier/Notebooks/spam_ham.ipynb
+++ b/Machine Learning/Minor/Spam Classifier/Notebooks/spam_ham.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "065d7827",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/kaustubhsawant/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -30,7 +30,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d7ecee78",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "data = 'SMSSpamCollection.csv'\n",
+    "data = '../data/SMSSpamCollection.csv'\n",
     "\n",
     "df = pd.read_csv(data,sep='\\t',header=None , names=[\"label\",\"message\"])\n",
     "print(f'''\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "05af30c6",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "d2b72675",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3c13a14b",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "f1ac7c9e",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f72b8621",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "36ba4e1b",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s5/rw3325yj3gj0t8w9k1zvycpm0000gn/T/ipykernel_3017/3762809335.py:14: FutureWarning: \n",
+      "/var/folders/s5/rw3325yj3gj0t8w9k1zvycpm0000gn/T/ipykernel_53068/3762809335.py:14: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fe63ead6",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "Text(50.722222222222214, 0.5, 'Actual')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
